--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,3 +1,6 @@
+/* pretty sure this can all be deleted */
+
+/*
 .container {
   padding: 0 2rem;
 }
@@ -114,3 +117,4 @@
     flex-direction: column;
   }
 }
+*/
