added random features per tutorial

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,4 +1,4 @@
-/* pretty sure this can all be deleted */
+/* below are default styles; this file is called by "./index.js" located in the root directory */
 
 /*
 .container {
